docs(ci): update README, ARCHITECTURE, and smoke-test workflow for Quarkus
- smoke-test.yml: JDK 21 -> 25 (Quarkus augmentation runs in the Gradle JVM and
  loads Java 25 classes; building on 21 fails with UnsupportedClassVersionError)
- README: badges (Java 25, Quarkus 3.36, Flink 2.2.1), prerequisites, and
  `./gradlew bootRun` -> `./gradlew quarkusDev`
- ARCHITECTURE.md: stack, REST layer (JAX-RS), Panache repository, classloader
  handling (pipeline.classpaths instead of the old jarmode-extract workaround),
  fast-jar Docker layout, config (.properties + @ConfigMapping), and the
  @QuarkusTest/RestAssured/@InjectMock test structure